# Minecraft-forwarding-translation-Proxy

./: .dockerignore  .gitignore  Cargo.toml  Config.toml  Dockerfile  README.md  pterodactyl-egg.json
.github/workflows/: release.yml  style.yml
packet_markers/: Cargo.toml
packet_markers/src/: lib.rs
src/: config.rs  connection.rs  main.rs  packets.rs  types.rs
src/packets/: disconnect.rs  generic.rs  handshake.rs  login_start.rs  mod.rs  packet_read.rs  packet_write.rs  velocity_plugin_request.rs  velocity_plugin_response.rs
