[package]
name = "forwarding_translation_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "io-util",
    "time",
    "fs",
    "signal",
] }
tokio-util = "0.7.16"
serde = { version = "1", features = ["derive", "rc"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.9"
toml-example = "0.16"
hmac = "0.12.1"
sha2 = "0.10.9"
