[package]
name = "forwarding_translation_proxy"
version = "0.1.2"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "io-util",
    "fs",
    "signal",
] }
tokio-util = "0.7.16"
serde = { version = "1", features = ["derive", "rc"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["local-time"] }
toml = { version = "0.9", default-features = false, features = [
    "std",
    "parse",
    "serde",
] }
toml-example = "0.16"
hmac = "0.12.1"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "parsing", "macros"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
